# llm_stream_endpoint

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
config/: prompt_config.toml
sample_curl_call/: Sample_Call.md
sample_queries/: Sample_Curl_Call_General_Context.md  Simple_Sample_Query_Classifier_Context.md  Simple_Sample_Query_SQL_Context.md
site/: index.html
src/: lib.rs  main.rs
src/args_init/: args.rs
src/llm/: device.rs  llm.rs  llm_initialization.rs  llm_mgt.rs  mod.rs  quantized_llm.rs  token_output_stream.rs
src/llm/llama_llm/: llama_initialization.rs  llama_management.rs  mod.rs
src/llm/mistral_llm/: mistral_initialization.rs  mistral_management.rs  mod.rs
src/llm/phi_v2_llm/: mod.rs  phi_v2_initialization.rs  phi_v2_management.rs
src/llm/puffin_llm/: mod.rs  puffin_initialization.rs  puffin_management.rs
